--- a/kitty.conf
+++ b/kitty.conf
@@ -1,10 +1,8 @@
-# BEGIN_KITTY_FONTS
 font_family      family="JetBrainsMono Nerd Font Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 font_size 14.0
-# END_KITTY_FONTS
-# Window Configs
 background_opacity 0.35
 window_padding_width 16
+include tokyonight-storm.conf
